Fix on mobile

--- a/frontend/styles/Sidebar.module.css
+++ b/frontend/styles/Sidebar.module.css
@@ -49,6 +49,12 @@
   }
 }
 
+@media (max-width: 590px) {
+  .container {
+    position: fixed;
+  }
+}
+
 .treeLink {
   display: block;
   font-size: 15px;
